# helthcare

./: CRITICAL_FIXES_SUMMARY.md  Cargo.toml  FINAL_PROJECT_REVIEW.md  HACKATHON_STRATEGY.md  HACKATHON_SUMMARY.md  PROJECT_REVIEW.md  README.md  TECHNICAL_ROADMAP.md  WCHL25_STRATEGY.md  test_ai_inference.py
.github/workflows/: apisec-scan.yml  codeql.yml
ai_model/: pretrained_medical_ai.py  rare_disease_classifier.py  requirements.txt  simple_classifier.py
canisters/ai_inference/: Cargo.toml
canisters/ai_inference/src/: lib.rs
canisters/federated_aggregator/: Cargo.toml
canisters/federated_aggregator/src/: lib.rs
canisters/privacy_engine/: Cargo.toml
canisters/privacy_engine/src/: lib.rs
client/web_interface/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/web_interface/src/: App.jsx  index.css
client/web_interface/src/components/: BlockchainStatus.jsx  DiagnosisInterface.jsx  FederatedLearning.jsx  PrivacyDashboard.jsx
libs/differential_privacy/: Cargo.toml
libs/differential_privacy/src/: lib.rs
libs/federated_learning/: Cargo.toml
libs/federated_learning/src/: aggregation.rs  communication.rs  compression.rs  lib.rs  optimization.rs
libs/medical_data/: Cargo.toml
libs/medical_data/src/: lib.rs  privacy.rs  rare_diseases.rs  validation.rs
