[workspace]
members = [
    "canisters/ai_inference",
    "canisters/federated_aggregator", 
    "canisters/privacy_engine",
    "libs/differential_privacy",
    "libs/federated_learning",
    "libs/medical_data",
    "client/web_interface"
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
k256 = "0.13"
threshold-crypto = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1