[package]
name = "federated_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"
rand = "0.8"
nalgebra = "0.32"
ndarray = "0.15"
rayon = "1.7"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand_distr = "0.4"
differential_privacy = { path = "../differential_privacy" }
medical_data = { path = "../medical_data" }